<?xml version="1.0"?>
<package>
  <name>joy_to_psoc</name>
  <version>0.0.0</version>
  <description>The joy_to_psoc package</description>

  <maintainer email="samson@bonfante.org">samson</maintainer>
  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>

  <build_depend>joy</build_depend>
  <run_depend>joy</run_depend>
</package>
